[package]
name = "zim"
version = "0.3.0"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>", "Andrew Chin <achin@eminence32.net>"]
documentation = "https://docs.rs/zim/"
repository = "https://github.com/dignifiedquire/zim"
homepage = "https://github.com/dignifiedquire/zim"
description = "ZIM reading and extraction"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

keywords = ["parser", "zim"]
categories = ["encoding", "parser-implementations"]

[dependencies]
byteorder = "^1.4.3"
memmap = "^0.7"
clap = "^3.1"
stopwatch = "^0.0.7"
pbr = "^1.0"
xz2 = "^0.1"
bitreader = "^0.3"
num_cpus = "1.13"
md-5 = "0.9"
hex = "0.4.0"
indicatif = "0.16"
rayon = "1.5"
rental = "0.5.6"
zstd = "0.11"

[[bin]]
name = "extract_zim"

[[bin]]
name = "ipfs_link"

[[bin]]
name = "zim-info"
path = "src/bin/zim_info.rs"
